2017-12-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* po/LINGUAS: Remove "fr", since we don't actually have a French
	translation.
	* po/fr.po: Delete file, since it contains nothing useful.

2017-12-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* doc/lmdb.3am: Two more man page fixes to satisfy rpmlint.

2017-12-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* doc/lmdb.3am: Remove stray "..." that rpmlint dislikes.

2017-12-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging/gawk-lmdb.spec.in: Tweak Summary. Remove basic.awk
	from %doc files.

2017-12-03         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.1.0.
	* configure.ac (AC_INIT): Bump version to 1.1.0.
	* doc/lmdb.3am: Update URLs, and indicate that mdb_get and
	mdb_cursor_get will flag returned data as user input in API version 2.
	* lmdb.c: Upgrade to support gawk API versions 1 and 2. Extension
	functions take a 3rd argument in version 2, so use API_FINFO_ARG
	as a placeholder. Use #if tests to comment out lint checks that are
	redundant in version 2.
	(SET_AND_RET): Use make_number so it will work in both API versions.
	(do_mdb_get): Return user input data instead of string data.
	(do_mdb_cursor_get): Populate key and data array elements as user input
	data instead of string data.
	(func_table): Use the new API_FUNC and API_FUNC_MAXMIN macros to
	create function records compatible with both API versions.
	* packaging/gawk-lmdb.spec.in: Upgrade to Fedora standards.

2017-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging/gawk-lmdb.spec.in: Change email address in changelog.

2016-07-30         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging/gawk-lmdb.spec.in: Use %{url} in Source0.

2016-07-23         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* lmdb.c: Fix FSF address.
	* packaging/gawk-lmdb.spec.in: Upgrade to Fedora requirements.
