@@ -1,3 +1,8 @@
+2017-12-18         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* gawk-pgsql.spec.in: Stop trying to install translation files,
+	since there are none.
+
 2017-11-26         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* gawk-pgsql.spec.in: Remove explicit requires for postgresql-libs,
@@ -12,22 +17,22 @@
 
 	* gawk-pgsql.spec.in: Change email address in changelog.
 
-2016-07-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+2016-07-30         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* gawk-pgsql.spec.in: Use %{url} in Source0.
 
-2016-07-23         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+2016-07-23         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* gawk-pgsql.spec.in: Upgrade to Fedora standards.
 
-2016-07-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+2016-07-22         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* gawk-pgsql.spec.in: Fix some rpmlint complaints.
 
-2014-11-02         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+2014-11-02         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* Makefile.am: Now a symbolic link to shared/packaging.makefile.
 
-2014-10-30         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+2014-10-30         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 	
 	This is now a separate package.
